--- a/index.html
+++ b/index.html
@@ -7,8 +7,47 @@
     <title>Omaidu Othniel's Portfolio Website</title>
     <!-- stylesheet link  -->
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <h1>portfolio site</h1>
+    <header id="navigation">
+        <a href="#" class="logo">my logo</a>
+        <nav>
+            <div class="mobile-menu">
+                <div class="menu-bar">
+                    <i class="fa fa-bars fa-1x hamburger"></i>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section class="hero-section">
+        <div class="hero-container">
+            <h1 id="name">
+                I’m Othniel. Glad to see you!
+            </h1>
+            <p class="details">
+                I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+            </p>
+            <a href="#" class="connect">let's connect</a>
+            <ul class="socials">
+                <li><a href="" >
+                    <i><img class="icons" src="/assets/images/icons/twitter.svg" alt=""></i>
+                </a></li>
+                <li><a href="" >
+                    <i><img class="icons" src="/assets/images/icons/Linkedin.svg" alt=""></i>
+                </a></li>
+                <li><a href="" >
+                    <i><img class="icons" src="/assets/images/icons/microverse.svg" alt=""></i>
+                </a></li>
+                <li><a href="" >
+                    <i><img class="icons" src="/assets/images/icons/github.svg" alt=""></i>
+                </a></li>
+                <li><a href="" >
+                    <i><img class="icons" src="/assets/images/icons/peace.svg" alt=""></i>
+                </a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
